--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -17,30 +17,51 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="qqi-5l-mgz" detailTextLabel="LTK-bO-CME" style="IBUITableViewCellStyleValue2" id="lie-c4-baY">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserTableViewCell" id="lie-c4-baY" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="76.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lie-c4-baY" id="Mis-Hk-iB9">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="76.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qqi-5l-mgz">
-                                            <rect key="frame" x="16" y="14" width="91" height="16"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LTK-bO-CME">
-                                            <rect key="frame" x="113" y="14" width="35" height="16"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MeL-Zc-E5F">
+                                            <rect key="frame" x="12" y="8" width="60" height="60.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="NQR-AT-s8U"/>
+                                                <constraint firstAttribute="width" secondItem="MeL-Zc-E5F" secondAttribute="height" multiplier="1:1" id="RbW-cm-0tq"/>
+                                            </constraints>
+                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4iy-Yw-SHV">
+                                            <rect key="frame" x="80" y="8" width="51" height="60.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LpK-MN-mfh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="51" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="lName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNl-8Q-eFU">
+                                                    <rect key="frame" x="0.0" y="20.5" width="51" height="40"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="MeL-Zc-E5F" firstAttribute="leading" secondItem="Mis-Hk-iB9" secondAttribute="leading" constant="12" id="5HU-vo-MTJ"/>
+                                        <constraint firstItem="4iy-Yw-SHV" firstAttribute="top" secondItem="MeL-Zc-E5F" secondAttribute="top" id="CuB-rL-UyE"/>
+                                        <constraint firstItem="MeL-Zc-E5F" firstAttribute="top" secondItem="Mis-Hk-iB9" secondAttribute="top" constant="8" id="PUt-1Z-KpJ"/>
+                                        <constraint firstItem="4iy-Yw-SHV" firstAttribute="leading" secondItem="MeL-Zc-E5F" secondAttribute="trailing" constant="8" id="cAm-ae-hbZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="MeL-Zc-E5F" secondAttribute="bottom" constant="8" id="pVT-xE-ZQf"/>
+                                        <constraint firstItem="4iy-Yw-SHV" firstAttribute="bottom" secondItem="MeL-Zc-E5F" secondAttribute="bottom" id="yLY-Dc-xPa"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="fNameLabel" destination="LpK-MN-mfh" id="ADG-zT-NMx"/>
+                                    <outlet property="lNameLabel" destination="NNl-8Q-eFU" id="xVd-Cv-x5Y"/>
+                                    <outlet property="userImageView" destination="MeL-Zc-E5F" id="0t0-TV-ZC5"/>
                                     <segue destination="Lvf-5H-INb" kind="show" identifier="UserDetailViewControllerSegue" id="FCE-pu-net"/>
                                 </connections>
                             </tableViewCell>
