--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -84,14 +84,59 @@
                     <view key="view" contentMode="scaleToFill" id="4cw-M5-XCV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ad7-jn-xzR">
+                                <rect key="frame" x="20" y="84" width="335" height="201"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ad7-jn-xzR" secondAttribute="height" multiplier="5:3" id="NOL-Ie-s1E"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="ZWk-xy-TvU">
+                                <rect key="frame" x="20" y="323" width="335" height="88"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tk-p5-rWi">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="41"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WwZ-Uc-YjH">
+                                        <rect key="frame" x="0.0" y="45" width="335" height="19.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1c-vc-Zq3">
+                                        <rect key="frame" x="0.0" y="68.5" width="335" height="19.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ad7-jn-xzR" firstAttribute="top" secondItem="LAO-EC-lp4" secondAttribute="top" constant="40" id="0FE-Fc-pwB"/>
+                            <constraint firstItem="ZWk-xy-TvU" firstAttribute="leading" secondItem="ad7-jn-xzR" secondAttribute="leading" id="79H-AC-iLP"/>
+                            <constraint firstItem="LAO-EC-lp4" firstAttribute="trailing" secondItem="ad7-jn-xzR" secondAttribute="trailing" constant="20" id="RBk-OF-Qdx"/>
+                            <constraint firstItem="ZWk-xy-TvU" firstAttribute="top" secondItem="ad7-jn-xzR" secondAttribute="bottom" constant="38" id="h1X-aC-kQG"/>
+                            <constraint firstItem="ad7-jn-xzR" firstAttribute="leading" secondItem="LAO-EC-lp4" secondAttribute="leading" constant="20" id="lR6-8O-AAV"/>
+                            <constraint firstItem="ZWk-xy-TvU" firstAttribute="trailing" secondItem="ad7-jn-xzR" secondAttribute="trailing" id="qEQ-xy-mWB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LAO-EC-lp4"/>
                     </view>
                     <navigationItem key="navigationItem" id="u0e-4V-1fD"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="q1c-vc-Zq3" id="vWc-VK-kA3"/>
+                        <outlet property="imageView" destination="ad7-jn-xzR" id="DnV-uK-NYO"/>
+                        <outlet property="nameLabel" destination="3tk-p5-rWi" id="PGg-Aw-G7Z"/>
+                        <outlet property="phoneLabel" destination="WwZ-Uc-YjH" id="hl3-JV-mfQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eWd-Rc-Llh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2103" y="-81"/>
+            <point key="canvasLocation" x="2101.5999999999999" y="-81.409295352323838"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Lic-ZH-GvO">
