--- a/Random Users/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Random Users/Views/Storyboards/Base.lproj/Main.storyboard
@@ -43,7 +43,23 @@
                             <outlet property="delegate" destination="ODL-Ge-lYV" id="ZzI-iZ-oyZ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="6aQ-h9-b7q"/>
+                    <navigationItem key="navigationItem" id="6aQ-h9-b7q">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="vEU-zq-x9w">
+                            <rect key="frame" x="121.5" y="5.5" width="171" height="33"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="First Name"/>
+                                <segment title="Last Name"/>
+                            </segments>
+                            <connections>
+                                <action selector="segmentedControl:" destination="ODL-Ge-lYV" eventType="valueChanged" id="H9z-P0-o3I"/>
+                            </connections>
+                        </segmentedControl>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="sortSegment" destination="vEU-zq-x9w" id="VsC-eZ-JVc"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KF2-TZ-1ux" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
